--- a/Asset/css/studenthome.css
+++ b/Asset/css/studenthome.css
@@ -67,6 +67,9 @@
 /* .teacher-selector:hover {
   background-color: red;
 } */
+.c-na{
+  cursor: not-allowed;
+}
 @media screen and (min-device-width: 320px) and (max-device-width: 480px) {
   .navbar-light .navbar-brand {
     font-size: 16px;
