--- a/Asset/css/studenthome.css
+++ b/Asset/css/studenthome.css
@@ -70,6 +70,10 @@
 .c-na{
   cursor: not-allowed;
 }
+.op-0-5{
+  opacity: 0.5;
+  cursor: not-allowed;
+}
 @media screen and (min-device-width: 320px) and (max-device-width: 480px) {
   .navbar-light .navbar-brand {
     font-size: 16px;
